# my-first-incremental-game

./: Cargo.toml  Dioxus.toml
assets/: main.css  tailwind.css
data/: bosses.toml  decks.toml
src/: game.rs  main.rs  ui.rs
src/game/: bossfight.rs  drafting.rs  energy.rs  rebirth.rs  training.rs
src/ui/: number_format.rs
