[package]
name = "my-first-incremental-game"
version = "0.1.0"
authors = ["sibbo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# UI
dioxus = { version = "0.7.9", features = [] }
dioxus-stores = { version = "0.7.9" }
dioxus-sdk = { version = "0.7.0", features = ["time"] }

# Game
num = "0.4.3"

# Datetime
jiff = { version = "0.2.29", features = ["js"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
