[package]
name = "my-first-incremental-game"
version = "0.1.0"
authors = ["sibbo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# UI
dioxus = { version = "0.7.9", features = [] }
dioxus-stores = { version = "0.7.9" }
dioxus-sdk = { version = "0.7.0", features = ["time"] }

thousands = "0.2.0"

# Game
num = "0.4.3"

# Datetime
jiff = { version = "0.2.31", features = ["js"] }

# Serde
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2+spec-1.1.0"
regex = "1.12.4"

# Randomness
rand = { version = "0.10.1" }
getrandom = { version = "0.4.3", features = ["wasm_js"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
